--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <img src="./assets/images/logo.svg" width="160" height="50" alt="Grilli - Home" title="Grilli - Home">
             </a>
 
-            <nav class="navbar active" data-navbar>
+            <nav class="navbar" data-navbar>
 
                 <button class="close-btn" aria-label="Close" data-nav-toggler>
                     <ion-icon name="close-outline" aria-hidden="true"></ion-icon>
