--- a/index.html
+++ b/index.html
@@ -193,6 +193,31 @@
     </header>
 
 
+    <main>
+        <article>
+
+            <!-- HERO -->
+
+
+            <section class="hero text-center" aria-label="home" id="home">
+                <ul class="hero-slider" data-hero-slider>
+
+                    <li class="slider-item active" data-hero-slider-item>
+
+                        <div class="slider-bg">
+                            <img src="./assets/images/hero-slider-1.jpg" width="1880" height="950" alt="Hero image" class="img-cover">
+                        </div>
+
+
+                    </li>
+                </ul>
+            </section>
+
+
+        </article>
+    </main>
+
+
 <!-- JS -->
 <script src="./assets/js/script.js"></script>
 
