--- a/index.html
+++ b/index.html
@@ -197,8 +197,6 @@
         <article>
 
             <!-- HERO -->
-
-
             <section class="hero text-center" aria-label="home" id="home">
 
                 <ul class="hero-slider" data-hero-slider>
@@ -284,7 +282,7 @@
                     <ion-icon name="chevron-back"></ion-icon>
                 </button>
 
-                <button class="slider-btn next" aria-label="Slide to next" data-prev-btn>
+                <button class="slider-btn next" aria-label="Slide to next" data-next-btn>
                     <ion-icon name="chevron-forward"></ion-icon>
                 </button>
 
