--- a/index.html
+++ b/index.html
@@ -365,20 +365,76 @@
 
                 </div>
             </section>
+
+            <!-- ABOUT -->
+            <section class="section about text-center" aria-labelledby="about-label" id="about">
+                <div class="container">
+
+                    <div class="about-content">
+
+                        <p class="label-2 section-subtitle" id="about-label">Our Story</p>
+
+                        <h2 class="headline-1 section-title">Every Fla vor Tells a Story</h2>
+
+                        <p class="section-text">
+                            Lorem Ipsum is simply dummy text of the printingand typesetting 
+                            industry lorem Ipsum has been the industrys standard dummy text 
+                            ever since the when an unknown printer took a galley of type and 
+                            scrambled it to make a type specimen book It has survived not only 
+                            five centuries, but also the leap into.
+                        </p>
+
+                        <div class="contact-label">Book Through Call</div>
+
+                        <a href="tel:+804001234567" class="body-1 contact-number hover-underline">
+                            +80 (400) 123 4567
+                        </a>
+
+                        <a href="#" class="btn btn-primary">
+                            <span class="text text-1">Read More</span>
+
+                            <span class="text text-2" aria-hidden="true">Read More</span>
+                        </a>
+
+                    </div>
+
+                    <figure class="about-banner">
+
+                        <img src="./assets/images/about-banner.jpg" width="570" height="570" loading="lazy" alt="about banner" class="w-100" data-parallax-item data-parallax-speed="1">
+
+                        <div class="abs-img abs-img-1 has-before" data-parallax-item data-parallax-speed="1.75">
+                            <img src="./assets/images/about-abs-image.jpg" width="285" height="285" loading="lazy" alt="" class="w-100">
+                        </div>
+
+                        <div class="abs-img abs-img-2 has-before">
+                            <img src="./assets/images/badge-2.png" width="133" height="134" loading="lazy" alt="">
+                        </div>
+
+                        <img src="./assets/images/shape-3.png" width="197" height="194" loading="lazy" alt="shape" class="shape">
+
+                    </figure>
+
+                </div>
+            </section>
     
         </article>
     </main>
 
 
-<!-- JS -->
-<script src="./assets/js/script.js"></script>
+    <!-- JS -->
+    <script src="./assets/js/script.js"></script>
 
-<!-- Ionicon -->
-<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <!-- Ionicon -->
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
 </body>
 </html>
-<!-- 
+
+<!-- ============================================================================================
 Source files were retrieved from codewithsadee's YouTube channel - all rights are reserved to him 
--->
+
+Download starter file here : https://www.youtube.com/redirect?event=video_description&redir_token=QUFFLUhqblMwQkt4cmszZUJLWjktMU01NzJiQ2ZRU3VjQXxBQ3Jtc0trRzB2eGRlRVI4dWpTaVNYaklRdk1DVmpPWUpsV0VJZWdoSHJBaVZVV29NbHZoVnpCbjVhYzVlbkNkYjRyZEFKbF9SelEwaGVua1RHTmgyMThNLXdRd3ZtbDUyOHQtTExTZ3lKblRLU280U0xRUXloNA&q=https%3A%2F%2Fdrive.google.com%2Ffile%2Fd%2F1Du1JEKrEAEipP7Js0Y2ddYCYTpez28da%2Fview%3Fusp%3Dshare_link&v=CjVGp5kGHxA
+or
+Go check his github repos : https://github.com/codewithsadee/grilli
+============================================================================================  -->
