--- a/index.html
+++ b/index.html
@@ -627,6 +627,126 @@
 
                 </div>
             </section>
+
+            <!-- Reservation -->
+            <section class="reservation">
+                <div class="container">
+
+                    <div class="form reservation-form bg-black-10">
+
+                        <form action="" class="form-left">
+
+                            <h2 class="healine-1 text-center">Online Reservation</h2>
+                            
+                            <p class="form-text text-center">
+                                booking request <a href="tel:+0641257939" class="link">+33 (0)6.41.25.79.39</a>
+                                or fill out the order from
+                            </p>
+
+                            <div class="input-wrapper">
+                                <!-- nom de la réservation -->
+                                <input type="text" name="name" placeholder="Nom" autocomplete="name" class="input-field">
+                                <!-- numéro de téléphone -->
+                                <input type="tel" name="phone" placeholder="Tel" autocomplete="tel" class="input-field">
+                            </div>
+
+                            <div class="input-wrapper">
+                                <!-- Nombre de personne -->
+                                <div class="icon-wrapper">
+                                    <ion-icon name="person-outline" aria-hidden="true"></ion-icon>
+
+                                    <select name="person" class="input-field">
+                                        <option value="1-personne">1 Personne</option>
+                                        <option value="2-personne">2 Personne</option>
+                                        <option value="3-personne">3 Personne</option>
+                                        <option value="4-personne">4 Personne</option>
+                                        <option value="5-personne">5 Personne</option>
+                                        <option value="6-personne">6 Personne</option>
+                                        <option value="7-personne">7 Personne</option>
+                                    </select>
+
+                                    <ion-icon name="chevron-down" aria-hidden="true"></ion-icon>
+                                </div>
+                                <!-- date de reservation -->
+                                <div class="icon-wrapper">
+                                    <ion-icon name="calendar-clear-outline" aria-hidden="true"></ion-icon>
+
+                                    <input type="date" name="reservation-date" class="input-field">
+
+                                    <ion-icon name="chevron-down" aria-hidden="true"></ion-icon>
+                                </div>
+                                <!-- heure de réservation -->
+                                <div class="icon-wrapper">
+                                    <ion-icon name="time-outline" aria-hidden="true"></ion-icon>
+
+                                    <select name="person" class="input-field">
+                                        <option value="19:00">19:00</option>
+                                        <option value="19:15">19:15</option>
+                                        <option value="19:30">19:30</option>
+                                        <option value="19:45">19:45</option>
+                                        <option value="20:00">20:00</option>
+                                        <option value="20:15">20:15</option>
+                                        <option value="20:30">20:30</option>
+                                        <option value="20:45">20:45</option>
+                                        <option value="20:45">21:00</option>
+                                        <option value="20:45">21:15</option>
+                                        <option value="20:45">21:30</option>
+                                        <option value="20:45">21:45</option>
+                                    </select>
+
+                                    <ion-icon name="chevron-down" aria-hidden="true"></ion-icon>
+                                </div>
+                            </div>
+
+                            <textarea name="message" placeholder="Message" autocomplete="off" class="input-field"></textarea>
+
+                            <button type="submit" class="btn btn-secondary">
+                                <span class="text text-1">Book A Table</span>
+                                <span class="text text-2" aria-hidden="true">Book A Table</span>
+                            </button>
+
+
+                        </form>
+
+                        <div class="form-right text-center" style="background-image: url('./assets/images/form-pattern.png');">
+
+                            <h2 class="headline-1 text-center">Contact Us</h2>
+
+                            <p class="contact-label">Booking Request</p>
+
+                            <a href="tel:0641257939" class="body-1 contact-number hover-underline">+33 (0)6.41.25.79.39</a>
+
+                            <div class="separator"></div>
+
+                            <p class="contact-label">Location</p>
+
+                            <address class="body-4">
+                                Restaurant St, Delicious City, <br>
+                                London 9578, UK
+                            </address>
+
+                            <p class="contact-label">Lunch Time</p>
+
+                            <p class="body-4">
+                                Monday to Sunday <br>
+                                11.00 am - 2.30pm
+                            </p>
+
+                            <p class="contact-label">Dinner Time</p>
+
+                            <p class="body-4">
+                                Monday to Sunday <br>
+                                05.00 pm - 10.00pm 
+                            </p>
+
+                        </div>
+
+                    </div>
+
+
+                </div>
+            </section>
+
              
         </article>
     </main>
