--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="preload" as="image" href="./assets/images/hero-slider-2.jpg">
     <link rel="preload" as="image" href="./assets/images/hero-slider-3.jpg">
 </head>
-<body>
+<body id="top">
     <!-- Preload -->
     <div class="preload" data-preaload>
         <div class="circle"></div>
@@ -931,6 +931,10 @@
 
         </div>
     </footer>
+    <!-- BackToTop -->
+    <a href="#top" aria-label="back to top" class="back-top-btn" data-back-top-btn>
+        <ion-icon name="chevron-up" aria-hidden="true"></ion-icon>
+    </a>
     <!-- JS -->
     <script src="./assets/js/script.js"></script>
     <!-- Ionicon -->
@@ -938,7 +942,6 @@
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
-
 <!-- ============================================================================================
 Source files were retrieved from codewithsadee's YouTube channel - all rights are reserved to him 
 
