--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <!-- Tag -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="title" content="Grilli - Amazing & Delicious Food">
-    <meta name="description" content="This is a Restaurant html template">
+    <meta name="title" content="Grilli - Votre destination gourmande">
+    <meta name="description" content="Découvrez Grilli, où la gastronomie rencontre le design moderne">
     <!-- Title -->
-    <title>Grilli - Amazing & Delicious Food</title>
+    <title>Grilli - Votre destination gourmande</title>
     <!-- icon -->
     <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
     <!-- fonts -->
@@ -154,7 +154,7 @@
 
                     <p class="body-4 navbar-text">Open: 9.30 am - 2.30pm</p>
 
-                    <a href="mailto:contact@ryanqueva.fr" class="body-4 sidebar-link">booking@grilli.com</a>
+                    <a href="mailto:contact@ryanqueva.fr" class="body-4 sidebar-link">contact@ryanqueva.fr</a>
 
                     <div class="separator"></div>
 
@@ -197,22 +197,22 @@
                             <img src="./assets/images/hero-slider-1.jpg" width="1880" height="950" alt="Hero image" class="img-cover">
                         </div>
 
-                        <p class="label-2 section-subtitle slider-reveal">Tradational & Hygine</p>
+                        <p class="label-2 section-subtitle slider-reveal">Cuisine traditionnelle</p>
 
 
                         <h1 class="display-1 hero-title slider-reveal">
-                            For the love of <br>
-                            delicious food
+                            Pour l'amour de la<br>
+                            nourriture délicieuse
                         </h1>
 
                         <p class="body-2 hero-text slider-reveal">
-                            Come with family & feel the joy of mouthwatering food
+                            Venez en famille et ressentez la joie d'une cuisine alléchante
                         </p>
 
                         <a href="#" class="btn btn-primary slider-reveal">
-                            <span class="text text-1">View Our Menu</span>
+                            <span class="text text-1">Voir notre menu</span>
 
-                            <span class="text text-2" aria-hidden="true">View Our Menu</span>
+                            <span class="text text-2" aria-hidden="true">Voir notre menu</span>
                         </a>
                     </li>
 
@@ -222,22 +222,22 @@
                             <img src="./assets/images/hero-slider-2.jpg" width="1880" height="950" alt="Hero image" class="img-cover">
                         </div>
 
-                        <p class="label-2 section-subtitle slider-reveal">delightful experience</p>
+                        <p class="label-2 section-subtitle slider-reveal">Délicieuse expérience</p>
 
 
                         <h1 class="display-1 hero-title slider-reveal">
-                            Flavors Inspired by <br>
-                            the Seasons
+                            Pour l'amour de la<br>
+                            nourriture délicieuse
                         </h1>
 
                         <p class="body-2 hero-text slider-reveal">
-                            Come with family & feel the joy of mouthwatering food
+                            Venez en famille et ressentez la joie d'une cuisine alléchante
                         </p>
 
                         <a href="#" class="btn btn-primary slider-reveal">
-                            <span class="text text-1">View Our Menu</span>
+                            <span class="text text-1">Voir notre menu</span>
 
-                            <span class="text text-2" aria-hidden="true">View Our Menu</span>
+                            <span class="text text-2" aria-hidden="true">Voir notre menu</span>
                         </a>
                     </li>
 
@@ -247,22 +247,22 @@
                             <img src="./assets/images/hero-slider-3.jpg" width="1880" height="950" alt="Hero image" class="img-cover">
                         </div>
 
-                        <p class="label-2 section-subtitle slider-reveal">amazing & delicious</p>
+                        <p class="label-2 section-subtitle slider-reveal">Incroyable et délicieux</p>
 
 
                         <h1 class="display-1 hero-title slider-reveal">
-                            Where every flavor <br>
-                            tells a story 
+                            Pour l'amour de la<br>
+                            nourriture délicieuse 
                         </h1>
 
                         <p class="body-2 hero-text slider-reveal">
-                            Come with family & feel the joy of mouthwatering food
+                            Venez en famille et ressentez la joie d'une cuisine alléchante
                         </p>
 
                         <a href="#" class="btn btn-primary slider-reveal">
-                            <span class="text text-1">View Our Menu</span>
+                            <span class="text text-1">Voir notre menu</span>
 
-                            <span class="text text-2" aria-hidden="true">View Our Menu</span>
+                            <span class="text text-2" aria-hidden="true">Voir notre menu</span>
                         </a>
                     </li>
 
@@ -279,21 +279,20 @@
                 <a href="#" class="hero-btn has-after">
                     <img src="./assets/images/hero-icon.png" width="48" height="48" alt="booking icon">
 
-                    <span class="label-2 text-center span">Book A Table</span>
+                    <span class="label-2 text-center span">Réserver une table</span>
                 </a>
             </section>
             <!-- Services -->
             <section id="services" class="section service bg-black-10 text-center" aria-label="service">
                 <div class="container">
 
-                    <p class="section-subtitle label-2">Flavors For Royalty</p>
+                    <p class="section-subtitle label-2">Saveurs de royauté</p>
 
-                    <h2 class="headline-1 section-title">We Offer Top Notch</h2>
+                    <h2 class="headline-1 section-title">Nous offrons du haut de gamme</h2>
 
                     <p class="section-text">
-                        Lorem Ipsum is simply dummy text of the 
-                        printing and typesetting industry lorem Ipsum 
-                        has been the industrys standard dummy text ever.
+                        Explorez notre menu raffiné, admirez notre galerie, 
+                        et laissez-vous tenter par l'ambiance unique de Grilli
                     </p>
 
                     <ul class="grid-list">
