--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <span class="span">Daily : 8.00 am to 10.00 pm</span>
             </div>
 
-            <a href="tel:+33641257939" class="topbar-item">
+            <a href="tel:+33641257939" class="topbar-item link">
                 <div class="icon">
                     <ion-icon name="call-outline" aria-hidden="true"></ion-icon>
                 </div>
@@ -61,7 +61,7 @@
 
             <div class="separator"></div>
 
-            <a href="mailto:contact@ryanqueva.fr" class="topbar-item">
+            <a href="mailto:contact@ryanqueva.fr" class="topbar-item link">
                 <div class="icon">
                     <ion-icon name="mail-outline" aria-hidden="true"></ion-icon>
                 </div>
