--- a/index.html
+++ b/index.html
@@ -705,7 +705,7 @@
 
                             <p class="contact-label">Booking Request</p>
 
-                            <a href="tel:0641257939" class="body-1 contact-number hover-underline">+33 (0)6.41.25.79.39</a>
+                            <a href="tel:0641257939" class="body-1 contact-number hover-underline">+33 6.41.25.79.39</a>
 
                             <div class="separator"></div>
 
