--- a/index.html
+++ b/index.html
@@ -916,8 +916,8 @@
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
-<!-- ============================================================================================
-Source files were retrieved from codewithsadee's YouTube channel - all rights are reserved to him 
+<!-- =====================================================================================================
+Les images & logos utilisé provienne du starter pack de codewithsadee's - Tout les droit lui sont réservé.
 
 Download starter file here : https://drive.google.com/file/d/1Du1JEKrEAEipP7Js0Y2ddYCYTpez28da/view
-============================================================================================  -->
+=====================================================================================================  -->
