--- a/index.html
+++ b/index.html
@@ -575,8 +575,8 @@
                     <div class="quote">”</div>
 
                     <p class="headline-2 testi-text">
-                        I wanted to thank you for inviting me down for that 
-                        amazing dinner the other night. The food was extraordinary.
+                        Je voulais te remercier de m'avoir invité à ce dîner 
+                        extraordinaire l'autre soir. La nourriture était exceptionnelle.
                     </p>
 
                     <div class="wrapper">
@@ -588,7 +588,7 @@
                     <div class="profile">
                         <img src="./assets/images/testi-avatar.jpg" width="100" height="100" loading="lazy" alt="Sam Jhonson" class="img">
 
-                        <p class="label-2 profile-name">Sam Jhonson</p>
+                        <p class="label-2 profile-name">Sam</p>
                     </div>
 
 
@@ -602,11 +602,11 @@
 
                         <form action="" class="form-left">
 
-                            <h2 class="healine-1 text-center">Online Reservation</h2>
+                            <h2 class="healine-1 text-center">Besoin d'un site ?</h2>
                             
                             <p class="form-text text-center">
-                                booking request <a href="tel:+0641257939" class="link">+33 (0)6.41.25.79.39</a>
-                                or fill out the order from
+                                Prendre rendez-vous <a href="tel:+0641257939" class="link">+33 (0)6.41.25.79.39</a>
+                                <!-- or fill out the order from -->
                             </p>
 
                             <div class="input-wrapper">
@@ -667,8 +667,8 @@
                             <textarea name="message" placeholder="Message" autocomplete="off" class="input-field"></textarea>
 
                             <button type="submit" class="btn btn-secondary">
-                                <span class="text text-1">Book A Table</span>
-                                <span class="text text-2" aria-hidden="true">Book A Table</span>
+                                <span class="text text-1">Réserver une table</span>
+                                <span class="text text-2" aria-hidden="true">Réserver une table</span>
                             </button>
 
 
@@ -715,9 +715,9 @@
             <!-- Fonctionnalité -->
             <section id="feature" class="section features text-center">
                 <div class="container">
-                    <p class="section-subtitle label-2">Why Choose Us</p>
+                    <p class="section-subtitle label-2">Pourquoi nous choisir</p>
 
-                    <h2 class="headline-1 section-title">Our Strength</h2>
+                    <h2 class="headline-1 section-title">Nos atouts</h2>
 
                     <ul class="grid-list">
 
@@ -781,9 +781,9 @@
             <section id="event" class="section event bg-black-10">
                 <div class="container">
 
-                    <p class="section-subtitle label-2 text-center">Recent Updates</p>
+                    <p class="section-subtitle label-2 text-center">Récente mise a jour</p>
 
-                    <h2 class="section-title headline-1 text-center">Upcoming Event</h2>
+                    <h2 class="section-title headline-1 text-center">Événement à venir</h2>
 
                     <ul class="grid-list">
                         <li>
@@ -831,8 +831,8 @@
                     </ul>
 
                     <a href="#" class="btn btn-primary">
-                        <span class="text text-1">View Our Blog</span>
-                        <span class="text text-2" aria-hidden="true">View Our Blog</span>
+                        <span class="text text-1">Consultez notre blog</span>
+                        <span class="text text-2" aria-hidden="true">Consultez notre blog</span>
                     </a>
 
                 </div>
@@ -900,7 +900,7 @@
             </div>
 
             <div class="footer-bottom">
-                <p class="copyright">&copy; 2024 Grilli. All Rights Reserved | Starter File used <a href="https://drive.google.com/file/d/1Du1JEKrEAEipP7Js0Y2ddYCYTpez28da/view" target="_blank" class="link">Here</a></p>
+                <p class="copyright">&copy; 2024 Grilli. Tous droits réservés | Fichier de départ <a href="https://drive.google.com/file/d/1Du1JEKrEAEipP7Js0Y2ddYCYTpez28da/view" target="_blank" class="link">ici</a></p>
             </div>
 
         </div>
@@ -918,6 +918,5 @@
 </html>
 <!-- =====================================================================================================
 Les images & logos utilisé provienne du starter pack de codewithsadee's - Tout les droit lui sont réservé.
-
 Download starter file here : https://drive.google.com/file/d/1Du1JEKrEAEipP7Js0Y2ddYCYTpez28da/view
 =====================================================================================================  -->
